claim_indemnification: Add method to retrieve claim information from an invoice (#2225)
Fix #10024

--- a/modules/claim_indemnification/doc/en/CHANGELOG
+++ b/modules/claim_indemnification/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10024 Add method to retrieve claim informations from an invoice
 * BUG#9914 Do not check previous period dates when scheduling cancellation
 * BUG#9874 Fix: No need to select a cancel reason to cancel indemnification cancellation action through wizard
 * BUG#9434 Fix: The required documents of a loss does not block the period schedulability of another loss
