--- a/modules/offered_insurance/doc/fr/CHANGELOG
+++ b/modules/offered_insurance/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Remplacement des petites listes par des onglets sur la vue formulaire d'un assureur
 * BUG#9483 Modification d'ids xml pour mise à jour
 * BUG#8953 Ajout d'un avertissement lors de la création de plusieurs assureurs sur le même tiers
 * OTH#0000 Le fait qu'une donnée complémentaire n'existe pas dans les règles ne doit pas être une erreur
