account_cog: Add tags to account and payment journal (#2234)
Fix #10048

--- a/modules/account_cog/doc/fr/CHANGELOG
+++ b/modules/account_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10048 Ajout des labels sur les comptes comptables
 * FEA#9417 Tri des lettrages par identifiant décroissant
 * FEA#8226 Adaptation de la réconciliation à l'amélioration de la méthode tryton reconcile
 * BUG#8679 S'assurer que la réconciliation en cascade ne sélectionne pas un tiers différent
