--- a/modules/account_payment_cog/doc/en/CHANGELOG
+++ b/modules/account_payment_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10048 Add tags to payment journals
 * BUG#9851 Do not set payment date on all move lines when creating a payment from different lines with inverted signs
 * BUG#9855 Financial manager should be able to delete a payment
 * BUG#9762 Fix account payment process batch args
