--- a/modules/contract_group/doc/en/CHANGELOG
+++ b/modules/contract_group/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9315 Iteration on organization hierarchy labels
 * FEA#9315 Display legal entity hierarchy with their contracts
 * BUG#9360 Display contract exit date on enrollment
 
