--- a/modules/contract_group/doc/fr/CHANGELOG
+++ b/modules/contract_group/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#9315 Iteration sur l'affichage des libellés dans la hierarchie
 * FEA#9315 Ajouter l'affichage de la hiérarchie des sociétés avec leurs contrats
 * BUG#9360 afficher la date de sortie du contrat sur l'affiliation
 
