--- a/modules/contract_insurance/doc/en/CHANGELOG
+++ b/modules/contract_insurance/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10055 Add configuration to show the covered element's name when editing it
 * OTH#0000 Also look for extra data in parent covered elements
 * FEA#9928 Manage covered elements as a tree
 * BUG#9690 Fix brouillard template possible crash if there is no decision on the underwriting
