contract: Fix active translation in french (#2238)

--- a/modules/contract/doc/fr/CHANGELOG
+++ b/modules/contract/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Correction de la traduction de active
 * OTH#0000 Suppression de la méthode "lowest_level_object", maintenant inutile
 * BUG#9498 Le gestionnaire de contrat devrait être capable de supprimer un devis
 * BUG#9490 Correction de l'appel au super lors de la suppression d'un devis
