--- a/modules/contract/doc/en/CHANGELOG
+++ b/modules/contract/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Fix active translation
 * OTH#0000 Remove now useless "lowest_level_object"
 * BUG#9498 Contract manager should be able to delete a quote contract
 * BUG#9490 Fix super when deleting quoted contract
