--- a/modules/commission_insurance_prepayment/doc/en/CHANGELOG
+++ b/modules/commission_insurance_prepayment/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10084 Take the min between the contract end date and the last paid invoice to calculate the first year premium
 * BUG#9729 Check contract existence for invoices of which we unset prepayement date when cancelling them
 * BUG#9650 Do not try to cancel prepayment on non-contract related invoices
 * BUG#9613 Fix on rights of prepayment commisisons creation
