--- a/modules/party_cog/doc/fr/CHANGELOG
+++ b/modules/party_cog/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10057 Ajout du téléphone portable et du mail dans la synthèse textuelle d'un tiers
 * FEA#9431 Ajout d'une fonction sur les tiers pour récupérer la valeur d'un identifiant depuis son type
 * FEA#9655 Ajout d'une extraction basique des données d'un tiers pour la RGPD
 * FEA#9379 Formater et ajouter indicatif pays lors de l'écriture d'un numéro de téléphone
