claim_pasrau: Fix pasrau (#2239)

--- a/modules/claim_pasrau/locale/fr.po
+++ b/modules/claim_pasrau/locale/fr.po
@@ -9,14 +9,16 @@ msgid ""
 "Zip: %(zip)s\n"
 "Income: %(income)s\n"
 "Start: %(start)s\n"
-"End: %(end)s"
+"End: %(end)s\n"
+"Invoice Date: %(invoice_date)s"
 msgstr ""
 "Impossible de calculer un taux Pasrau par défaut pour les paramètres :\n"
 "\n"
 "Code postal : %(zip)s\n"
 "Revenu : %(income)s\n"
 "Début de période : %(start)s\n"
-"Fin de période : %(end)s"
+"Fin de période : %(end)s\n"
+"Date de facturation : %(invoice_date)s"
 
 msgctxt "error:claim.pasrau.default.rate:"
 msgid "Unable to find PASRAU region for zip code %s"
@@ -162,7 +164,7 @@ msgstr "Taux Pasrau par défaut"
 
 msgctxt "model:claim.pasrau.select_file,name:"
 msgid "Claim Pasrau Select File"
-msgstr "Choisir un fichier de taux PASRAU"
+msgstr "Choisir un fichier CRM nominatif PASRAU"
 
 msgctxt "model:ir.action,name:act_default_pasrau_rate_form"
 msgid "Pasrau Default Rates"
@@ -178,7 +180,7 @@ msgstr "Taux Pasrau"
 
 msgctxt "model:ir.action,name:upload_pasrau_file_wizard"
 msgid "Upload Pasrau File Wizard"
-msgstr "Assistant de chargement de fichier de taux PASRAU"
+msgstr "Assistant de chargement de fichier CRM nominatif PASRAU"
 
 msgctxt "model:ir.ui.menu,name:menu_default_pasrau_rates"
 msgid "Default Rates"
@@ -190,7 +192,7 @@ msgstr "Pasrau"
 
 msgctxt "model:ir.ui.menu,name:menu_upload_pasrau_file"
 msgid "Upload Pasrau File"
-msgstr "Charger un fichier de taux PASRAU"
+msgstr "Charger un fichier CRM nominatif PASRAU"
 
 msgctxt "model:party.pasrau.rate,name:"
 msgid "Party Custom Pasrau Rate"
