--- a/modules/endorsement_insurance_invoice_sepa/doc/en/CHANGELOG
+++ b/modules/endorsement_insurance_invoice_sepa/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10044 Do not update the SEPA mandate when amend the previous mandate
 * BUG#9734 Mandate checking blocks contract reactivation even if the blocking billing information is outdated
 
 Version 2.0 - 2018-04-13
