--- a/modules/endorsement_commission/doc/en/CHANGELOG
+++ b/modules/endorsement_commission/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10049 Propagate broker change to already generated invoices
 * FEA#9349 Remove the field agency and replace it with the distribution network
 
 Version 2.0 - 2018-04-13
