--- a/modules/endorsement_commission/doc/fr/CHANGELOG
+++ b/modules/endorsement_commission/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* BUG#10049 Propagation du changement d'apporteur aux quittances déjà générées
 * FEA#9349 Suppression du champ agence et remplacement par le réseau de distribution
 
 Version 2.0 - 2018-04-13
