--- a/modules/party_cog/doc/en/CHANGELOG
+++ b/modules/party_cog/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#5633 Merge party_cog and country_address_configuration and enhance address form view
 * FEA#10057 Add phone and email on party textual synthesis
 * FEA#9431 Add function on parties to get the value of an identifier from its type
 * FEA#9655 Add basic data extraction on a party according to the GPDR
