--- a/modules/commission_insurer/locale/fr.po
+++ b/modules/commission_insurer/locale/fr.po
@@ -2,34 +2,9 @@
 msgid ""
 msgstr "Content-Type: text/plain; charset=utf-8\n"
 
-msgctxt "error:account.invoice:"
-msgid "Commission Reset following unreconciliation of invoice %s"
-msgstr "Annulation de commission suite à délettrage de la quittance %s"
-
 msgctxt "error:account.move.line:"
 msgid "Automatic Split Move"
 msgstr "Découpage automatique"
-
-msgctxt "error:commission:"
-msgid ""
-"An error occured while looking for previously generated invoice (%s result "
-"found, 1 expected)"
-msgstr ""
-"Une erreur est survenue lors de la recherche de la quittance précédemment "
-"générée (%s résultat(s) trouvé(s), 1 attendu)"
-
-msgctxt "error:commission:"
-msgid ""
-"An error occured while looking for previously generated invoice line (%s "
-"result found, 1 expected), ensure there is no already existing invoice."
-msgstr ""
-"Une erreur est survenue lors de la recherhe de la ligne de quittance "
-"précédemment générée (%s résultat(s) trouvé(s), 1 attendu), assurez-vous "
-"qu'il n'y ai pas déja un bordereau existant."
-
-msgctxt "error:commission:"
-msgid "An insurer notice has already been generated today for (%s)"
-msgstr "Un bordereau assureur a déja été généré aujourd'hui pour (%s)"
 
 msgctxt "error:insurer:"
 msgid "Notice kind does not match insurer configuration"
@@ -43,6 +18,10 @@ msgid ""
 msgstr ""
 "Vous ne pouvez pas générer simultanément les bordereaux d'assureurs ayant "
 "une configuration différente de regroupement des bordereaux"
+
+msgctxt "error:received_premiums:"
+msgid "Received Premium"
+msgstr "Primes reçues"
 
 msgctxt "error:report.template:"
 msgid "All Insurer Invoice"
@@ -68,10 +47,6 @@ msgctxt "field:account.invoice,is_for_insurer:"
 msgid "For insurer"
 msgstr "Pour assureur"
 
-msgctxt "field:account.invoice.line,principal_lines:"
-msgid "Principal Lines"
-msgstr "Lignes "
-
 msgctxt "field:account.move.line,principal_invoice_line:"
 msgid "Principal Invoice Line"
 msgstr "Ligne de facturation assureur"
@@ -91,10 +66,6 @@ msgstr "Pour assureur"
 msgctxt "field:commission.create_invoice_principal.ask,company:"
 msgid "Company"
 msgstr "Société"
-
-msgctxt "field:commission.create_invoice_principal.ask,description:"
-msgid "Description"
-msgstr "Description"
 
 msgctxt "field:commission.create_invoice_principal.ask,id:"
 msgid "ID"
@@ -154,21 +125,13 @@ msgstr ""
 "Journal par défaut qui va être pris en compte lors de la génération des "
 "virements pour les assureurs"
 
-msgctxt "help:insurer,group_insurer_inovices:"
+msgctxt "help:insurer,group_insurer_invoices:"
 msgid ""
 "If True, all insurer related invoices (premiums / claims / etc) will be "
 "grouped in one"
 msgstr ""
-"Si coché, tous les bordereaux (primes, prestations, etc) seront regroupés en"
-" en seul"
-
-msgctxt "model:account.journal,name:journal_commission_reset"
-msgid "Commission Reset Journal"
-msgstr "Journal de reprise de prime suite à délettrage"
-
-msgctxt "model:account.journal.type,name:journal_type_commission_reset"
-msgid "Commission Reset"
-msgstr "Reprise de prime suite à délettrage"
+"Si coché, toutes les bordereaux générés pour les assureurs (primes, "
+"sinistres, etc.) seront regroupés en un seul"
 
 msgctxt "model:commission.create_invoice_principal.ask,name:"
 msgid "Create Invoice Principal"
