--- a/modules/migrator/doc/en/CHANGELOG
+++ b/modules/migrator/doc/en/CHANGELOG
@@ -1,3 +1,5 @@
+* FEA#9975 Managing the creation of staging table from csv files
+
 Version 2.0 - 2018-04-13
 Version 1.14 - 2017-11-09
 Version 1.12 - 2017-04-28
