--- a/modules/contract_loan_invoice/doc/en/CHANGELOG
+++ b/modules/contract_loan_invoice/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Improve performances when looking for the loan of an invoice line
 * BUG#8746 Make sure we do not rebill a loan contract until its end when it's reactivated
 
 Version 2.0 - 2018-04-13
