--- a/modules/contract_loan_invoice/doc/fr/CHANGELOG
+++ b/modules/contract_loan_invoice/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Amélioration des performances pour la recherche du prêt rattaché à une ligne de quittance
 * BUG#8746 Ne pas requittancer un contrat jusqu'à sa date de fin lors de la réactivation
 
 Version 2.0 - 2018-04-13
