--- a/modules/claim_group_life_fr/doc/en/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10086 Add default benefit rule based on the event type
 * BUG#9997 Iteration - Fixes - Add rules
 * FEA#9940 Add default indemnification rules
 * FEA#9904 Add default benefit rules in coog
