--- a/modules/coog_core/doc/en/CHANGELOG
+++ b/modules/coog_core/doc/en/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Improve performances of get_user_language
 * OTH#0000 Improve and detail default trytond.conf
 * OTH#0000 Update developper view to match the debug module definition
 * OTH#0000 Manage sql queries trying to match CurrentDate with a date field
