--- a/modules/coog_core/doc/fr/CHANGELOG
+++ b/modules/coog_core/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* OTH#0000 Amélioration des performances pour get_user_language
 * OTH#0000 Amélioration du fichier de configuration "par défaut" de trytond
 * OTH#0000 Mise à jour du plugin de la vue développeur par rapport au module de debug
 * OTH#0000 Gestion des requêtes SQL portant sur CurrentDate pour les champs Date
