account_payment_sepa_contract: Do not throw an error when the identification field is not defined on the mandate Sepa (#2259)
Fix #10133

--- a/modules/account_payment_sepa_contract/doc/en/CHANGELOG
+++ b/modules/account_payment_sepa_contract/doc/en/CHANGELOG
@@ -1,8 +1,9 @@
+* BUG#10133 Fix crash on contract subscription process when the mandate identification is not set
 * BUG#9635 Initialization of the payer and the direct debit account at contract subscription
 * BUG#9619 Check billing informations related to a sepa mandate before cancelling it
 * BUG#9171 Add missing searcher definition
 * BUG#9171 Add searcher on invoice sepa mandate
-* BUG#9120 Correction de l'initialisation du mandat sepa lors de l'activation de contrats non quittancés
+* BUG#9120 Fix mandate initialization when activating non-billed contracts
 * BUG#8828 Add a new mandate update method from contract data
 
 Version 2.0 - 2018-04-13
