--- a/modules/offered_insurance/locale/fr.po
+++ b/modules/offered_insurance/locale/fr.po
@@ -117,7 +117,9 @@ msgstr "Valeur par Défaut"
 
 msgctxt "field:extra_data,default_value_selection:"
 msgid "Default Value"
-msgstr "Valeur par Défaut"
+msgstr ""
+"Si coché, la valeur de la donnée complémentaire sera affichée dans le nom "
+"d'enregistement de l'élément couvert"
 
 msgctxt "field:extra_data,digits:"
 msgid "Digits"
@@ -442,6 +444,10 @@ msgstr "Créé par"
 msgctxt "field:offered.item.description,extra_data_def:"
 msgid "Extra Data"
 msgstr "Données Complémentaires"
+
+msgctxt "field:offered.item.description,extra_data_rec_name:"
+msgid "Extra Data To Show In The Rec Name"
+msgstr "Donnée complémentaire à afficher dans le nom d'enregistrement"
 
 msgctxt "field:offered.item.description,id:"
 msgid "ID"
@@ -954,6 +960,14 @@ msgstr "Identifiant XML"
 msgctxt "help:extra_data,selection:"
 msgid "A couple of key and label separated by \":\" per line"
 msgstr "Un couple de clé, valeur séparaé par un \":\" par ligne"
+
+msgctxt "help:offered.item.description,extra_data_rec_name:"
+msgid ""
+"If set, the extra data value will be showed in the rec name of the covered "
+"element"
+msgstr ""
+"Si coché, la valeur de la donnée complémentaire sera affichée dans le nom "
+"d'enregistement de l'élément couvert"
 
 msgctxt "help:offered.item.description,show_name:"
 msgid ""
