--- a/modules/claim_group_life_fr/doc/fr/CHANGELOG
+++ b/modules/claim_group_life_fr/doc/fr/CHANGELOG
@@ -1,3 +1,4 @@
+* FEA#10139 Ajout de décisions d'éligibilité par défaut avec gestion dans les règles de franchise 
 * FEA#10086 Ajout de règles de franchise en fonction de la nature de l'événement
 * BUG#9997 Itération - Correctifs - ajout de règle
 * FEA#9940 Ajout de règles d'indemnisation par défaut
